--- a/requirements.txt
+++ b/requirements.txt
@@ -70,3 +70,7 @@ pycodestyle~=2.10.0
 zipp~=3.11.0
 seaborn~=0.12.2
 opencv-python~=4.5.5.62
+astunparse~=1.6.3
+tensorboard~=2.12.3
+tensorflow~=2.12.0
+keras~=2.12.0
